--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_native_splash: ^2.4.6
   shared_preferences: ^2.5.3
   iconify_flutter: ^0.0.7
+  image_picker: ^1.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
