--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   iconify_flutter: ^0.0.7
   image_picker: ^1.1.2
   uuid: ^4.5.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
